*: first pass at new chat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "anthropic>=0.62.0",
     "authlib>=1.3.0",
     "fastapi[standard]>=0.116.1",
     "google-cloud-bigtable>=2.19.0",
